// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should be rendered 1`] = `
<div
  className="card "
  style={
    Object {
      "height": 200,
      "width": 200,
    }
  }
>
  <p
    className="card-title"
  >
    <a />
  </p>
  <span
    className="arrow"
  />
</div>
`;

exports[`Card should be rendered if it has documentSize prop 1`] = `
<div
  className="card "
  style={
    Object {
      "height": 200,
      "width": 200,
    }
  }
>
  <p
    className="card-title"
  >
    <a />
  </p>
  <span
    className="arrow"
  />
  <div
    className="document-btn"
  >
    <span
      className="document-icon"
    />
    <span>
      PDF(
      100k
      )
    </span>
  </div>
</div>
`;
